# assembly3d

./: .hgignore  Anim.md  DaeShift.md  Formats.md  Ideas.md  Mesh.md  MeshPrim.md  MeshTest.md  MeshWiz.md  ObjShift.md  ProjectHome.md  Scene.md  Sidebar.md  Tools.md  Viewer.md
api/java/: Animation.java  CoordinateType.java  IndexType.java  Mesh.java
api/java/load/: AnimLoad.java  MeshLoad.java
api/java/print/: AnimationPrint.java  MeshPrint.java
samples/anim/: Forward.anim.json  Forward.anim.xml
samples/cube/: Cube.mesh.debug.xml  Cube.mesh.json  Cube.mesh.xml
samples/infinite/: Infinite.mesh.json  Infinite.mesh.xml  Infinite.txt
samples/logo/: Assembly3D.mesh.json  Assembly3D.mesh.xml
samples/mesh/: Infinite.mesh.json  Infinite.mesh.xml
samples/scene/: Test.scene.json  Test.scene.xml
samples/webgl/: index.html  mesh.html
samples/webgl/glsl/: simple.frag  simple.vert
samples/webgl/lib/: glShaderUtils.js  ioUtils.js
tools/blend/: io_export_assembly3d.py
tools/shift/collada/: Accessor.java  BufferUtils.java  Coordinates.java  DaeShift.java  Elements.java  Input.java  InputCmp.java  InputParser.java  Matrix4x4.java  Mesh.java  MeshProcessor.java  ModifierProcessor.java  Morph.java  MorphProcessor.java  ProcessorMesh.java  ProcessorMorph.java  ProcessorSkin.java  SceneProcessor.java  SingleIndexSet.java  Skin.java  SkinProcessor.java  Triangulization.java  XmlAttributes.java  XmlCommons.java
tools/shift/util/: Assembly.java  IndexType.java  Path.java
tools/viewer/: CMakeLists.txt
tools/viewer/cmake_modules/: FindGLEW.cmake  FindGLFW.cmake
tools/viewer/cmake_scripts/: FindFreeImage.cmake  config.h.in
tools/viewer/external_libs/: install_dependencies.sh
tools/viewer/glsl/: Simple.frag  Simple.vert
tools/viewer/src/: Animation.cpp  Animation.h  AnimationLoader.cpp  AnimationLoader.h  App.cpp  App.h  Framework.cpp  Framework.h  Graphics.cpp  Graphics.h  Location3D.h  Main.cpp  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  ProgramSimple.cpp  ProgramSimple.h  Resources.h  SceneLoader.cpp  SceneLoader.h  Settings.cpp  Settings.h  ShaderUtils.cpp  ShaderUtils.h  Utils.cpp  Utils.h  Vector2.h  Vector3.h  framework.cpp  framework.h  main.cpp
tools/wiz/: CMakeLists.txt
tools/wiz/common/: A3DIncludes.h  A3DTypes.h  A3DUtils.h  Assembly3D.h  Assembly3DIncludes.h  Assembly3DTypes.h  Assembly3DUtils.h  CMakeLists.txt  FileUtils.cpp  FileUtils.h  KDTree.h  Mesh.cpp  Mesh.h  MeshIO.cpp  MeshIO.h  StringUtils.cpp  StringUtils.h  WizIncludes.h  WizTypes.h  WizUtils.h  XmlParser.cpp  XmlParser.h
tools/wiz/common/wiz_utils/: FileUtils.cpp  FileUtils.h  StringUtils.h  XmlParser.cpp
tools/wiz/docs/: Doxyfile  README_LINUX.txt  README_OSX.txt  README_WIN.txt  a3dtools_doxyfile
tools/wiz/external_libs/: CMakeLists.txt  install_dependencies.sh
tools/wiz/mesh_prim/: CMakeLists.txt  Main.cpp  MeshPrim.h  MeshPrimIncludes.h  PrimGen.cpp  PrimGen.h  Primitive.cpp  Primitive.h
tools/wiz/mesh_prim/primitives/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Disk.cpp  Disk.h  PartialCylinder.cpp  PartialCylinder.h  PartialDisk.cpp  PartialDisk.h  Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h  Trapezoid.cpp  Trapezoid.h
tools/wiz/mesh_test/: CMakeLists.txt  Main.cpp  MeshTest.h  MeshTestIncludes.h  MeshTestTypes.h  MeshTesterIncludes.h  MeshTesterTypes.h  TesterTool.cpp  TesterTool.h
tools/wiz/mesh_wiz/: AttributeTool.cpp  AttributeTool.h  BakeTool.cpp  BakeTool.h  CMakeLists.txt  ConvertTool.cpp  ConvertTool.h  FrontFaceTool.cpp  FrontFaceTool.h  Main.cpp  Mesh.cpp  Mesh.h  MeshIO.cpp  MeshIO.h  MeshTool.cpp  MeshTool.h  MeshWiz.h  MeshWizIncludes.h  MeshWizTypes.h  OptimizeTool.cpp  OptimizeTool.h  RenameTool.cpp  RenameTool.h  TextureTool.cpp  TextureTool.h  ToolManager.cpp  ToolManager.h  TransformTool.cpp  TransformTool.h
tools/wiz/testsuite/: generate_all_primitives.sh  run_tests.sh
xml/schema/: anim.xsd  mesh.xsd  modifier.xsd  scene.xsd
xml/transform/: anim.xsl  mesh.xsl  scene.xsl
